Fix profile section spacing

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,15 @@ h6,
     line-height: 1.15rem;
 }
 
+.sidebar .profile-img {
+    max-width: 50px;
+}
+
+.sidebar .profile-name {
+    position: relative;
+    top: 4px;
+}
+
 /* Content */
 [role="main"] {
     padding-top: 3rem;
